# ykzz-quant

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
app/: config.py  database.py  logging.py
app/api/: app.py  routes.py
app/backtest/: costs.py  data_loader.py  metrics.py  params.py  rebalance.py  run.py  suspension.py  visualization.py
app/data/: collect.py  jsl_collector.py  models.py  price_history_collector.py  tushare_collector.py
app/factor/: calculate.py  convert_value.py  double_low.py  premium_rate.py  remain_years.py  ytm.py
app/strategy/: double_low.py  filters.py  low_premium.py  params.py  run.py
app/ui/: app.py
openspec/changes/mvp-core/: design.md  proposal.md  tasks.md
openspec/changes/mvp-core/specs/backtest-layer/: spec.md
openspec/specs/api-layer/: spec.md
openspec/specs/data-layer/: spec.md
openspec/specs/factor-layer/: spec.md
openspec/specs/strategy-layer/: spec.md
openspec/specs/ui-layer/: spec.md
scripts/: daily_update.sh
