[project]
name = "ykzz-quant"
version = "0.1.0"
description = "A股可转债策略研究工具"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.14.0",
    "tushare>=1.4.0",
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "streamlit>=1.30.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
